# modbus_weather

./: .pre-commit-config.yaml  Dockerfile  Readme.rst  app.py  pyproject.toml  requirements.txt  server_async.py
.circleci/: config.yml
.github/workflows/: buildx.yml
modbus_weather/: app.py  server_async.py
tests/: test_connection.py
