[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "modbus_weather"
authors = [
    {name = "Jaroslav Henner", email = "1187265+jarovo@users.noreply.github.com"},
]
description = "openweatherapi to modubs adapter"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["modbus", "openweatherapi"]
license = {text = "GNU-GPL3"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pymodbus@git+https://github.com/pymodbus-dev/pymodbus.git@f6eb90a",
    "requests==2.28.2",
]

dynamic = ["version"]

[project.scripts]
modbus_weather = "modbus_weather.app:main"


[project.optional-dependencies]
dev = [
    "pre-commit==3.1.1",
    "pytest==7.2.0"
]